# clouds

./: .gitignore  .gitmodules  CMakeLists.txt  cant_build_without_me.ps1  cant_build_without_me.sh  depend.ps1
engine/: CMakeLists.txt  asset_db.c  asset_db.h  assets.c  assets.h  buffer.c  buffer.h  camera.h  constants.h  ebo.c  ebo.h  ecs.c  ecs.h  engine.c  engine.h  events.c  events.h  gizmo.c  gizmo.h  mesh.c  mesh.h  pbr.c  pbr.h  physic.c  physic.h  profiler.c  profiler.h  renderer.c  renderer.h  rigidbody.c  rigidbody.h  sbo.c  sbo.h  shader.c  shader.h  sound.c  sound.h  transform.c  ubo.c  ubo.h  (+7 more)
engine/components/: audio_listener.c  audio_listener.h  audio_source.c  audio_source.h  camera.c  camera.h  mesh.c  mesh.h  rigidbody.c  rigidbody.h  transform.c  transform.h
engine/core/: core.h  file_system.c  file_system.h  fwd_iterator.c  fwd_iterator.h  fwd_list.c  fwd_list.h  platform.h  queue_iterator.c  queue_iterator.h  static_queue.c  static_queue.h  types.h
engine/entities/: player.c  player.h  world.c
engine/shader/gizmo/: line.frag  text.frag
engine/shader/physic/: physic.comp
engine/shader/render/: pbr.vert
sandbox/: assets.h  sandbox.c  sandbox.h
sandbox/entities/: ai.c  ai.h  player.c  player.h  world.c  world.h
shader/gizmo/: line.vert  text.vert
shader/physic/: physic.comp
shader/render/: pbr.frag
